# AppOptimizeFramework

./: .gitignore  build.gradle  gradle.properties  readme.md  settings.gradle
android-framework/src/main/java/android/os/: Build.java  Looper.java  Message.java  MessageQueue.java
app/: build.gradle
app/src/androidTest/java/com/knightboost/appoptimizeframework/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/knightboost/appoptimizeframework/: MainActivity.kt  MainFragment.kt  MyApp.kt  SplashActivity.kt
app/src/main/java/com/knightboost/appoptimizeframework/cpu/: CpuReadUtil.kt
app/src/main/java/com/knightboost/appoptimizeframework/gsonoptsample/: GsonOptTypeAdapterFactory.java  LazyReflectiveTypeAdapterFactory.java  User.java  UserTypeAdapter.java
app/src/main/java/com/knightboost/appoptimizeframework/gsonopttest/: A.java  GsonTest.kt  RecommendTabInfo.kt
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  fragment_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/knightboost/appoptimizeframework/: ExampleUnitTest.kt
atrace-processor/: build.gradle
atrace-processor/src/main/java/com/bytedance/rheatrace/processor/: Adb.java  Main.java  StackTraceUtil.java
atrace/atrace-server/: build.gradle
atrace/atrace-server/src/androidTest/java/ccom/kngihtboost/atraceserver/: ExampleInstrumentedTest.kt
atrace/atrace-server/src/main/: AndroidManifest.xml
atrace/atrace-server/src/test/java/ccom/kngihtboost/atraceserver/: ExampleUnitTest.kt
docs/: qualcomms.txt
gradle/wrapper/: gradle-wrapper.properties
gson-opt/: build.gradle
gson-opt-apt/: build.gradle
gson-opt-apt/src/main/java/com/knightboost/gsonopt/apt/: AutoGsonAdapterProcessor.kt
gson-opt/src/main/java/com/knightboost/gsonopt/: AutoGsonAdapter.kt
kbArt/: CMakeLists.txt  build.gradle  gradle.properties
kbArt/src/androidTest/java/com/knightboost/artvm/: ExampleInstrumentedTest.kt
kbArt/src/main/cpp/: art_jni.cpp  art_thread_jni.cpp  art_vm.cpp  sliver.cpp
kbArt/src/main/cpp/art/: art.cpp  art_thread.cpp  art_thread.h  art_xdl.cpp
kbArt/src/main/cpp/include/: art.h  art_def.h  art_thread.h  art_xdl.h  common.h  macro.h  modifiers.h
kbArt/src/main/cpp/sliver/: fetch_stack_visitor.cpp  fetch_stack_visitor.h  sample_trace.cpp  sample_trace.h
kbArt/src/main/java/com/knightboost/artvm/: ArtHackException.java  ArtThread.java  KbArt.java
kbArt/src/test/java/com/knightboost/artvm/: ExampleUnitTest.kt
kprofiler/: CMakeLists.txt  build.gradle  gradle.properties
kprofiler/src/androidTest/java/com/knightboost/kprofiler/: ExampleInstrumentedTest.kt
kprofiler/src/main/cpp/: kprofiler.cpp  kprofiler.h  kprofiler_JNI.cpp  listeners.h
kprofiler/src/main/cpp/atrace/: CMakeLists.txt
kprofiler/src/main/cpp/atrace/trace/: atrace_hook.cpp  atrace_jni.cpp  binary_trace.cpp  binary_trace.h  io_proxy.cpp  method_tracer.cpp  method_tracer.h  native_trace_writer.cpp  native_trace_writer.h  recoder.cpp  recoder.h  thread_name_collector.cpp  trace_dev.cpp  trace_provider.cpp  trace_provider.h  trace_proxy.cpp
kprofiler/src/main/cpp/atrace/utils/: build.h  fs.cpp  threads.cpp  threads.h  timers.cpp
kprofiler/src/main/cpp/jvmagent/: agent_env.cpp  agent_env.h  class_load_tracer.cpp  class_load_tracer.h  jvmti_helper.cpp  jvmti_helper.h
kprofiler/src/main/cpp/jvmti/: jvmti.h
kprofiler/src/main/cpp/trace/: atrace.cpp  atrace.h  atrace_hook.h  atrace_jni.cpp  binary_trace.cpp  binder_proxy.cpp  binder_proxy.h  io_proxy.h  native_trace_callbacks.cpp  native_trace_callbacks.h  thread_name_collector.h  trace.h  trace_proxy.h
kprofiler/src/main/cpp/utils/: debug.h  fs.h  proc_fs.cpp  proc_fs.h  string_util.h  threads.cpp  timers.h
kprofiler/src/main/java/com/knightboost/kprofiler/: KLogger.kt  KProfiler.java  MonitorClassLoader.kt  ReflectUtil.kt  TraceSwitch.java
kprofiler/src/main/java/com/knightboost/kprofiler/atrace/: BinaryTrace.java  RheaATrace.java  TraceEnableTagsHelper.java
kprofiler/src/test/java/com/knightboost/kprofiler/: ExampleUnitTest.kt
looper-free/: build.gradle  gradle.properties
looper-free/src/main/java/com/knightboost/looper/free/: LooperMessageObserver.java  LooperObserver.java  LooperObserverUtil.java  ReflectUtil.java
message-observer/: build.gradle  gradle.properties  readme.md
message-observer/src/androidTest/java/com/knightboost/looperMonitor/: ExampleInstrumentedTest.kt
message-observer/src/main/java/com/knightboost/messageobserver/: MessageObserver.java  MessageObserverHub.java  MessageObserverManager.kt
message-observer/src/test/java/com/knightboost/looperMonitor/: ExampleUnitTest.kt
optimize-framework/: CMakeLists.txt  build.gradle  gradle.properties
optimize-framework/src/androidTest/java/com/knightboost/optimize/: ExampleInstrumentedTest.kt
optimize-framework/src/main/: AndroidManifest.xml
optimize-framework/src/main/cpp/: thread_cpu_affinity_manager.cpp
optimize-framework/src/main/java/com/knightboost/optimize/: ReflectUtil.kt
optimize-framework/src/main/java/com/knightboost/optimize/cpuboost/: CpuBoostManager.kt  CpuPerformance.kt  QcmCommands.kt  QcmCpuPerformance.kt  ThreadCpuAffinityManager.java  VoidCpuPerformance.kt
optimize-framework/src/main/java/com/knightboost/optimize/util/: StringUtil.java  ThreadUtil.kt
optimize-framework/src/test/java/com/knightboost/optimize/: ExampleUnitTest.kt
optimize-looper/: build.gradle  gradle.properties  readme.md
optimize-looper/src/androidTest/java/com/knightboost/optimize/looperopt/: ExampleInstrumentedTest.kt
optimize-looper/src/main/java/com/knightboost/optimize/looperopt/: HiddenReflectionUtil.java  LooperMsgOptimizeManager.java  MessageOptHandler.java  MsgCode.java  MsgOptimizeType.java  StateListener.java  TargetMessageChecker.java
optimize-other/: build.gradle
optimize-other/src/main/java/com/knightboost/preload/: ClassPreloadExecutor.kt  PreloadDemander.java
optimize-other/src/main/java/retrofit2/: RetrofitPreloadUtil.kt
(+28 files in other folders)
